fixed spacing in header

--- a/docs/css/components/header.scss
+++ b/docs/css/components/header.scss
@@ -42,15 +42,16 @@
       font-weight: 300;
       letter-spacing: 1px;
       font-size: 0.9em;
-
+      vertical-align: middle;
       & .dot{
         width: 14px;
         height: 14px;
         border-radius: 50%;
-        margin-right: 15px;
+        margin-right: 12px;
         background-color: $white;
         display: inline-block;
         vertical-align: middle;
+        margin-top: -2px;
         &.blue{ background-color: $teal; }
         &.green{ background-color: $green; }
         &.light-purple{ background-color: $grey; }
